--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-watch": "~0.4.3",
     "matchdep": "~0.1.1",
-    "grunt-open": "~0.2.0"
+    "grunt-open": "~0.2.0",
+    "grunt-contrib-jshint": "~0.7.1",
+    "jshint-stylish": "~0.1.3",
+    "grunt-cli": "~0.1.11"
   },
   "engines": {
     "node": "&gt;=0.10"
   }
-
 }
